<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:excludeFromRecents="true"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp"
    tools:context=".dialogs.CreatePlaylistActivity">

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Create new playlist"-->
<!--        android:textAlignment="center"-->
<!--        android:textAllCaps="true"-->
<!--        android:textColor="@color/colorPrimary"-->
<!--        android:textSize="@dimen/second_title_text_size" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_playlist_name"
        app:counterEnabled="true"
        app:counterMaxLength="50">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Button
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/apply"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>

</LinearLayout>
