<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/backgroundColor"
    android:excludeFromRecents="true"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    tools:context=".dialogs.ScanDeviceDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <com.example.musicplayer.widget.LineView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp" />

        <ProgressBar
            android:id="@+id/ProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/ScanResultParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:gravity="center_horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/ScanResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/scan_result_fail" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
