<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/Background"
    tools:context=".activity.SongActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/little_icon_size"
            android:layout_height="@dimen/little_icon_size" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/SongTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/song_name_placeholder"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/title_text_size" />

            <TextView
                android:id="@+id/SongArtistView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:singleLine="true"
                android:text="@string/song_author_placeholder"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/little_text_size" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/little_icon_size"
            android:layout_height="@dimen/little_icon_size" />
    </LinearLayout>

    <com.example.musicplayer.widget.PageView
        android:id="@+id/PageView"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center"
        app:circle_color="@color/colorSecondary"
        app:circle_margins="3dp"
        app:circle_radius="4dp"
        app:selected_circle_color="@color/colorPrimary" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingVertical="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/CurrentTimeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_time_placeholder"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/little_text_size" />

            <SeekBar
                android:id="@+id/SeekBar"
                style="@style/Widget.SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100" />

            <TextView
                android:id="@+id/SongDurationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_time_placeholder"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/little_text_size" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/SelectPlayModeButton"
                android:layout_width="@dimen/little_icon_size"
                android:layout_height="@dimen/little_icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:src="@drawable/btn_shuffle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/PreviousSongButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/btn_previous_normal" />

                <com.example.musicplayer.widget.ControlButton
                    android:id="@+id/ControlButton"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/btn_play_normal" />

                <ImageView
                    android:id="@+id/NextSongButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/btn_next_normal" />
            </LinearLayout>

            <ImageView
                android:id="@+id/MakeFavoriteButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:src="@drawable/icon_collect_normal" />
        </FrameLayout>
    </LinearLayout>

    <View
        android:id="@+id/nav_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</LinearLayout>
